# funkwhale

./: .codespellignore  .env.dev  .gitignore  .gitlab-ci.yml  .gitpod.yml  .pre-commit-config.yaml  .yarnrc  2092.fix  CHANGELOG  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  dev.yml  docker-bake.json  flake.nix  pyproject.toml
api/: Dockerfile  Makefile  Pipfile  Readme.md  manage.py  pyproject.toml  schema.yml
api/config/: api_urls.py  asgi.py  plugins.py  routing.py  schema.py
api/config/settings/: common.py  local.py  production.py  testing.py
api/config/urls/: __init__.py  api.py  api_v2.py  subsonic.py
api/docker/: server.sh
api/funkwhale_api/: __init__.py
api/funkwhale_api/activity/: utils.py  views.py
api/funkwhale_api/audio/: filters.py  models.py  renderers.py  serializers.py  views.py
api/funkwhale_api/cli/: base.py  main.py  users.py
api/funkwhale_api/common/: authentication.py  fields.py  filters.py  middleware.py  models.py  permissions.py  preferences.py  serializers.py  signals.py  throttling.py  utils.py  validators.py
api/funkwhale_api/favorites/: activities.py  admin.py  factories.py  filters.py  models.py  serializers.py  views.py
api/funkwhale_api/federation/: activity.py  admin.py  api_serializers.py  api_urls.py  api_views.py  contexts.py  factories.py  jsonld.py  models.py  routes.py  serializers.py  signing.py  tasks.py  urls.py  utils.py  views.py
api/funkwhale_api/history/: activities.py  admin.py  factories.py  filters.py  models.py  serializers.py  views.py
api/funkwhale_api/instance/: dynamic_preferences_registry.py  serializers.py  stats.py  urls.py  urls_v2.py  views.py
api/funkwhale_api/manage/: filters.py  serializers.py  urls.py  views.py
api/funkwhale_api/moderation/: dynamic_preferences_registry.py  filters.py  mrf.py  mrf_policies.py  serializers.py  signals.py  tasks.py
api/funkwhale_api/music/: admin.py  dynamic_preferences_registry.py  factories.py  fake_data.py  filters.py  importers.py  licenses.py  metadata.py  models.py  mutations.py  serializers.py  signals.py  spa_views.py  tasks.py  urls_v2.py  utils.py  views.py
api/funkwhale_api/musicbrainz/: client.py  urls.py
api/funkwhale_api/playlists/: filters.py  models.py  parsers.py  renderers.py  serializers.py  urls.py  urls_v2.py  utils.py  views.py
api/funkwhale_api/providers/: urls.py
api/funkwhale_api/radios/: factories.py  filters.py  lb_recommendations.py  models.py  radio_v2.py  radios.py  radios_v2.py  registries_v2.py  serializers.py  urls.py  urls_v2.py  utils.py  views.py
api/funkwhale_api/subsonic/: filters.py  renderers.py  serializers.py  views.py
api/funkwhale_api/tags/: filters.py  models.py  tasks.py  views.py
api/funkwhale_api/typesense/: factories.py  tasks.py  utils.py
api/funkwhale_api/users/: admin.py  api_urls.py  api_urls_v2.py  factories.py  models.py  rest_auth_urls.py  serializers.py  views.py  views_v2.py  wordlist.txt
api/requirements/: base.txt  local.txt
api/tests/: conftest.py  test_import_audio_file.py  test_test_utils.py  test_urls.py
api/tests/activity/: test_utils.py  test_views.py
api/tests/audio/: test_serializers.py  test_views.py
api/tests/cli/: test_main.py  test_users.py
api/tests/common/: test_authentication.py  test_commands.py  test_fields.py  test_middleware.py  test_models.py  test_permissions.py  test_throttling.py  test_views.py
api/tests/favorites/: test_activity.py  test_favorites.py  test_filters.py  test_models.py  test_serializers.py  test_views.py
api/tests/federation/: test_activity.py  test_api_serializers.py  test_api_views.py  test_jsonld.py  test_routes.py  test_serializers.py  test_tasks.py  test_third_party_activitypub.py  test_views.py
api/tests/history/: test_activity.py  test_filters.py  test_history.py  test_serializers.py  test_views.py
api/tests/instance/: test_nodeinfo.py
api/tests/manage/: test_serializers.py  test_views.py
api/tests/moderation/: test_mrf_policies.py
api/tests/music/: test_commands.py  test_filters.py  test_metadata.py  test_migrations.py  test_models.py  test_music.py  test_serializers.py  test_spa_views.py  test_tasks.py  test_urls.py  test_utils.py  test_views.py
api/tests/playlists/: test.xspf  test_filters.py  test_renderers.py  test_serializers.py  test_urls_v2.py  test_utils.py  test_views.py
api/tests/radios/: test_api.py  test_filters.py  test_lb_recommendations.py  test_radios.py  test_radios_v2.py  test_serializers.py
api/tests/subsonic/: test_renderers.py  test_serializers.py  test_views.py
api/tests/tags/: test_filters.py  test_tasks.py
api/tests/typesense/: test_tasks.py  test_utils.py
api/tests/users/: test_views.py  test_views_v2.py
docs/: Dockerfile  Makefile  build_docs.sh  build_swagger.sh  changelog.rst  conf.py  get-releases-json.py  glossary.md  index.md  index.rst  pyproject.toml  redirects.txt  schema.yml  serve.py  swagger.yml  troubleshooting.rst
docs/_scripts/: locale-prune-untranslated.py  serve.py
docs/_templates/: layout.html  versions.html
docs/admin/: backup.rst  configuration.rst  index.rst  migration.rst  mrf.rst  troubleshooting.rst
docs/administrator/: import.md  index.md  migration.md
docs/administrator/configuration/: change-url.md  env-file.md  index.md  instance-settings.md  instance_settings.md  mrf.md  (+1 more)
docs/api/: definitions.yml  properties.yml
docs/changes/: funkwhale-0-changelog.md  funkwhale-0-changelog.rst
docs/cli/: examples.rst  index.rst
docs/contributor/: documentation.md  index.md
docs/developer/: ap-overview.md
docs/developers/: debugging.rst  plugins.rst
docs/federation/: index.rst
docs/installation/: debian.rst  index.rst
docs/locales/: .gitignore
docs/moderator/: index.md  reports.rst
docs/specs/: schema.yml
docs/user_documentation/: index.md
docs/users/: reports.rst
scripts/: Makefile  build_metadata.py  build_metadata_test.py  ci-release.sh  ci-upload-packages.sh  compile-templates.py  get-contributions-stats.py  pyproject.toml  releases.py  releases_test.py  set-api-build-metadata.sh
(+1554 files in other folders)
