[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Funkwhale Collective <contact@funkwhale.audio>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.8"

sphinx = "==5.3.0"
sphinx_design = "==0.3.0"
sphinx-intl = "2.0.1"
sphinx-rtd-theme = "==1.1.1"
sphinxcontrib-mermaid = "0.7.1"
myst-parser = "==1.0.0"

django = "==3.2.18"
django-environ = "==0.9.0"
funkwhale-api = {path = "../api"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
