[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Funkwhale Collective <contact@funkwhale.audio>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.9"

sphinx = "7.2.6"
sphinx_design = "0.5.0"
sphinx-copybutton = "==0.5.2"
sphinx-intl = "2.1.0"
sphinx-rtd-theme = "==2.0.0"
sphinxcontrib-mermaid = "0.9.2"
myst-parser = "2.0.0"


[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "2024.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
