[tool.poetry]
name = "funkwhale-scripts"
version = "0.0.0"
description = "Funkwhale Scripts"
authors = ["Funkwhale Collective"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = "true"
log_level = "DEBUG"
